Trying to fix background hero img not showing up on mobile

--- a/NM2/src/index.css
+++ b/NM2/src/index.css
@@ -60,6 +60,10 @@ body {
   /* font-family: 'Montserrat', sans-serif; */
 }
 
+img {
+  overflow: hidden;
+}
+
 li {
   list-style-type: none;
 }
@@ -360,7 +364,7 @@ a {
 .hero {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./img/svg/hero.svg);
   background-size: cover;
-  height: 99vh;
+  min-height: 99vh;
   background-attachment: fixed;
   position: relative;
   display: flex;
@@ -1925,7 +1929,12 @@ a:nth-child(2) {
   }
 
   .wavy-div-container {
-    margin: 5rem auto 0 auto;
+    margin: 0 auto 0 auto;
+  }
+
+  .wavy-div-box:before {
+    width: 0;
+    height: 0;
   }
 
   .wavy-container-size__principles {
